hphp/test/slow/hhbbc/magic_call_005.php.expectf
a

Fatal error: Call to protected method Asd::heh from anonymous context in %s/slow/hhbbc/magic_call_005.php on line 18
